// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<tabs> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 1</span>
          <!--v-if-->
        </div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-active arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 2</span>
          <!--v-if-->
        </div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 3</span>
          <!--v-if-->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -100%;\\">
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [editable] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-card-gutter arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-card-gutter\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-tab arco-tabs-tab-active arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 1</span><span class=\\"arco-tabs-tab-close-btn\\"><span class=\\"arco-icon-hover arco-icon-hover-size-medium\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></span></div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 2</span><span class=\\"arco-tabs-tab-close-btn\\"><span class=\\"arco-icon-hover arco-icon-hover-size-medium\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></span></div>
        <div class=\\"arco-tabs-tab\\"><span class=\\"arco-tabs-tab-title\\">Tab 3</span>
          <!--v-if-->
        </div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 4</span><span class=\\"arco-tabs-tab-close-btn\\"><span class=\\"arco-icon-hover arco-icon-hover-size-medium\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></span></div>
        <!---->
      </div>
      <div class=\\"arco-tabs-nav-add-btn\\"><span class=\\"arco-icon-hover arco-icon-hover-size-medium\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-plus\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M5 24h38M24 5v38\\"></path></svg></span></div>
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 1</div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 2</div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 3</div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 4</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [extra] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-tab arco-tabs-tab-active arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 1</span>
          <!--v-if-->
        </div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 2</span>
          <!--v-if-->
        </div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 3</span>
          <!--v-if-->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!----><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Action
      </button>
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [icon] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-tab arco-tabs-tab-active arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-calendar\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z\\"></path></svg> Tab 1 </span>
          <!--v-if-->
        </div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-clock-circle\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z\\"></path></svg> Tab 2 </span>
          <!--v-if-->
        </div>
        <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-user\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M7 37c0-4.97 4.03-8 9-8h16c4.97 0 9 3.03 9 8v3a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1v-3Z\\"></path><circle cx=\\"24\\" cy=\\"15\\" r=\\"8\\"></circle></svg> Tab 3 </span>
          <!--v-if-->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [position] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-radio-group-button arco-radio-group-size-medium arco-radio-group-direction-horizontal\\"><span class=\\"arco-radio-button arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"top\\"><span class=\\"arco-radio-button-content\\">Top</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"right\\"><span class=\\"arco-radio-button-content\\">Right</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"bottom\\"><span class=\\"arco-radio-button-content\\">Bottom</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"left\\"><span class=\\"arco-radio-button-content\\">Left</span></span></span></div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
      <!---->
      <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
        <!---->
        <div class=\\"arco-tabs-nav-tab\\">
          <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
            <div class=\\"arco-tabs-tab arco-tabs-tab-active arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 1</span>
              <!--v-if-->
            </div>
            <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 2</span>
              <!--v-if-->
            </div>
            <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 3</span>
              <!--v-if-->
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div class=\\"arco-tabs-nav-extra\\">
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"arco-tabs-content\\">
        <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
          <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [type] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-radio-group-button arco-radio-group-size-medium arco-radio-group-direction-horizontal\\"><span class=\\"arco-radio-button arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"line\\"><span class=\\"arco-radio-button-content\\">Line</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"card\\"><span class=\\"arco-radio-button-content\\">Card</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"card-gutter\\"><span class=\\"arco-radio-button-content\\">Card Gutter</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"text\\"><span class=\\"arco-radio-button-content\\">Text</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"rounded\\"><span class=\\"arco-radio-button-content\\">Rounded</span></span><span class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"capsule\\"><span class=\\"arco-radio-button-content\\">Capsule</span></span></span></div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
      <!---->
      <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
        <!---->
        <div class=\\"arco-tabs-nav-tab\\">
          <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
            <div class=\\"arco-tabs-tab arco-tabs-tab-active arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 1</span>
              <!--v-if-->
            </div>
            <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 2</span>
              <!--v-if-->
            </div>
            <div class=\\"arco-tabs-tab arco-tabs-tab-closable\\"><span class=\\"arco-tabs-tab-title\\">Tab 3</span>
              <!--v-if-->
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div class=\\"arco-tabs-nav-extra\\">
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"arco-tabs-content\\">
        <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
          <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
